[gd_scene load_steps=15 format=3 uid="uid://o8clx8ssohi8"]

[ext_resource type="Script" uid="uid://bpbmvcanwhhp5" path="res://Scripts/player.gd" id="1_um8lo"]
[ext_resource type="Script" uid="uid://cjh7ywxsu0xm7" path="res://Scripts/SelectCharacter.gd" id="2_x3d5u"]
[ext_resource type="Texture2D" uid="uid://cnbe5cxtpvmv0" path="res://Assets/Textures/north.png" id="3_b43ah"]

[sub_resource type="BoxMesh" id="BoxMesh_um8lo"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b43ah"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3icqa"]
albedo_color = Color(1, 0.68144, 0.582295, 1)

[sub_resource type="BoxMesh" id="BoxMesh_y6xdh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5wxv7"]
albedo_color = Color(0.877954, 0.368666, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y5hcb"]
albedo_color = Color(0.28, 0.028, 0.0406001, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2nftw"]
albedo_color = Color(0, 0.1105, 0.51, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x3d5u"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(0.667828, 0, 0.131102, 1)

[sub_resource type="PrismMesh" id="PrismMesh_b43ah"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_shmu5"]
transparency = 1
albedo_texture = ExtResource("3_b43ah")

[sub_resource type="PlaneMesh" id="PlaneMesh_vxq8l"]

[node name="Character" type="Node3D"]
script = ExtResource("1_um8lo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.395, 0, 0, 0, 1, 0, 0, 0, 0.385, 0, 0.503092, 0)
visible = false
mesh = SubResource("BoxMesh_um8lo")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("2_x3d5u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_b43ah")

[node name="Model" type="Node3D" parent="."]

[node name="Head" type="MeshInstance3D" parent="Model"]
transform = Transform3D(0.17, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.897817, 0.0592226)
material_override = SubResource("StandardMaterial3D_3icqa")
mesh = SubResource("BoxMesh_y6xdh")
skeleton = NodePath("../../..")

[node name="Body" type="MeshInstance3D" parent="Model"]
transform = Transform3D(0.38, 0, 0, 0, 0.35, 0, 0, 0, 0.145, 0, 0.62348, 0.0632012)
material_override = SubResource("StandardMaterial3D_5wxv7")
mesh = SubResource("BoxMesh_y6xdh")
skeleton = NodePath("../../..")

[node name="Backpack" type="MeshInstance3D" parent="Model"]
transform = Transform3D(0.38, 0, 0, 0, 0.395, 0, 0, 0, 0.18, 0, 0.599475, -0.0985719)
material_override = SubResource("StandardMaterial3D_y5hcb")
mesh = SubResource("BoxMesh_y6xdh")
skeleton = NodePath("../../..")

[node name="Legs" type="Node3D" parent="Model"]

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Model/Legs"]
transform = Transform3D(0.38, 0, 0, 0, 0.15, 0, 0, 0, 0.145, 0, 0.373957, 0.0632012)
material_override = SubResource("StandardMaterial3D_2nftw")
mesh = SubResource("BoxMesh_y6xdh")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Model/Legs"]
transform = Transform3D(0.13, 0, 0, 0, 0.3, 0, 0, 0, 0.145, -0.124696, 0.149257, 0.063003)
material_override = SubResource("StandardMaterial3D_2nftw")
mesh = SubResource("BoxMesh_y6xdh")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Model/Legs"]
transform = Transform3D(0.13, 0, 0, 0, 0.3, 0, 0, 0, 0.145, 0.125359, 0.149257, 0.063003)
material_override = SubResource("StandardMaterial3D_2nftw")
mesh = SubResource("BoxMesh_y6xdh")
skeleton = NodePath("../../../..")

[node name="Arrow" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-0.515, 7.77628e-08, 0, -7.77628e-08, -0.515, 0, 0, 0, 0.06, 0, 1.4804, 0.0858815)
visible = false
material_override = SubResource("StandardMaterial3D_x3d5u")
mesh = SubResource("PrismMesh_b43ah")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Model/Arrow"]
transform = Transform3D(-1.94175, -2.93196e-07, 0, 2.93196e-07, -1.94175, 0, 0, 0, 16.6667, 4.33754e-07, 2.87262, -1.43136)
material_override = SubResource("StandardMaterial3D_shmu5")
mesh = SubResource("PlaneMesh_vxq8l")
skeleton = NodePath("../../..")
